nodeos_multiple_version_protocol_feature_mv_test should be optional as it depends on some tests/multiversion_paths.conf file that does not exist

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -116,9 +116,11 @@ set_property(TEST nodeos_startup_catchup_lr_test PROPERTY LABELS long_running_te
 
 set(ALTERNATE_VERSION_LABELS_FILE "${CMAKE_BINARY_DIR}/tests/multiversion_paths.conf")
 
+if(EXISTS "${ALTERNATE_VERSION_LABELS_FILE}")
 add_test(NAME nodeos_multiple_version_protocol_feature_mv_test COMMAND tests/nodeos_multiple_version_protocol_feature_test.py
          -v --clean-run --dump-error-detail --alternate-version-labels-file ${ALTERNATE_VERSION_LABELS_FILE} WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
 set_property(TEST nodeos_multiple_version_protocol_feature_mv_test PROPERTY LABELS mixed_version_tests)
+endif()
 
 if(ENABLE_COVERAGE_TESTING)
 
