Adjusted build script functionality to prompt for custom installation path if one is not provided.

--- a/scripts/.environment
+++ b/scripts/.environment
@@ -13,7 +13,7 @@ else
     export EOSIO_VERSION_FULL="${EOSIO_VERSION_MAJOR}.${EOSIO_VERSION_MINOR}.${EOSIO_VERSION_PATCH}-${EOSIO_VERSION_SUFFIX}"
 fi
 
-export INSTALL_LOCATION=${INSTALL_LOCATION:-$HOME}
+export INSTALL_LOCATION=${INSTALL_LOCATION}
 export EOSIO_INSTALL_DIR="${INSTALL_LOCATION}/eosio/${EOSIO_VERSION}"
 export TEMP_DIR="${INSTALL_LOCATION}/tmp"
 
