--- a/plugins/net_plugin/CMakeLists.txt
+++ b/plugins/net_plugin/CMakeLists.txt
@@ -3,5 +3,9 @@ add_library( net_plugin
              net_plugin.cpp
              ${HEADERS} )
 
-target_link_libraries( net_plugin chain_plugin producer_plugin appbase fc )
-target_include_directories( net_plugin PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/../chain_interface/include  "${CMAKE_CURRENT_SOURCE_DIR}/../../libraries/appbase/include")
+target_link_libraries( net_plugin chain_plugin topology_plugin producer_plugin appbase fc )
+target_include_directories( net_plugin PUBLIC
+            ${CMAKE_CURRENT_SOURCE_DIR}/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/../chain_interface/include
+            ${CMAKE_CURRENT_SOURCE_DIR}/../topology_plugin/include
+            "${CMAKE_CURRENT_SOURCE_DIR}/../../libraries/appbase/include")
