--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -224,7 +224,9 @@ add_subdirectory( contracts )
 add_subdirectory( plugins )
 add_subdirectory( programs )
 add_subdirectory( scripts )
-add_subdirectory( unittests )
+if(NOT APPLE)
+  add_subdirectory( unittests )
+endif()
 add_subdirectory( tests )
 add_subdirectory( tools )
 add_subdirectory( debian )
