--- a/scripts/.environment
+++ b/scripts/.environment
@@ -16,4 +16,6 @@ fi
 export EOSIO_INSTALL_DIR="${EOSIO_INSTALL_DIR:-${HOME}/eosio/${EOSIO_VERSION}}"
 export TEMP_DIR="${TEMP_DIR:-${HOME}/tmp}"
 
+[[ -d $BUILD_DIR ]] && export CACHED_INSTALL_PATH=$(grep "CMAKE_INSTALL_PREFIX:PATH" build/CMakeCache.txt | cut -d= -f2)
+
 . ./scripts/.build_vars
