--- a/scripts/.environment
+++ b/scripts/.environment
@@ -16,6 +16,6 @@ fi
 export EOSIO_INSTALL_DIR="${EOSIO_INSTALL_DIR:-${HOME}/eosio/${EOSIO_VERSION}}"
 export TEMP_DIR="${TEMP_DIR:-${HOME}/tmp}"
 
-([[ -f ${BUILD_DIR}/CMakeCache.txt ]]) && export CACHED_INSTALL_PATH=$(grep "CMAKE_INSTALL_PREFIX:PATH" ${BUILD_DIR}/CMakeCache.txt | cut -d= -f2)
+[[ -f ${BUILD_DIR}/CMakeCache.txt ]] && export CACHED_INSTALL_PATH=$(grep "CMAKE_INSTALL_PREFIX:PATH" ${BUILD_DIR}/CMakeCache.txt | cut -d= -f2)
 
 . ./scripts/.build_vars
