--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -30,7 +30,8 @@
         "environment":
         {
             "SKIP_PRE_V180": "true",
-            "SKIP_V180": "false"
+            "SKIP_V180": "true"
+            "SKIP_V200": "false"
         }
     }
 }
