--- a/pipeline.jsonc
+++ b/pipeline.jsonc
@@ -22,7 +22,8 @@
         "environment":
         {
             "SKIP_PRE_V180": "true",
-            "SKIP_V180": "false"
+            "SKIP_V180": "true",
+            "SKIP_V200": "false,"
         }
     },
     "eosio-replay-tests":
