Remove trailing hash tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ compiler:
 os:
 - linux
 before_install:
-- echo '##### CHECKPOINT 1 #####'
+- echo '##### CHECKPOINT 1'
 script:
-- echo '##### CHECKPOINT 2 #####'
+- echo '##### CHECKPOINT 2'
 after_success:
-- echo '##### CHECKPOINT 3 #####'
+- echo '##### CHECKPOINT 3'
