--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ after_success:
 - echo '##### CHECKPOINT 3'
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 - docker tag eos-dev eoio/ci:ubuntu-18.04
-- docker push eoio/ci:ubuntu-18.04
+- docker push eosio/ci:ubuntu-18.04
