--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,7 @@ script:
 after_success:
 - echo '##### CHECKPOINT 3'
 - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-- docker tag eos-dev eosio/ci:ubuntu-18.04
-- docker push eosio/ci:ubuntu-18.04
+# - docker tag eos-dev eosio/ci:ubuntu-18.04
+# - docker push eosio/ci:ubuntu-18.04
+- docker tag eos-dev eosio/producer:ci-ubuntu-18.04 # temporary workarond while awaiting permissions to docker.io/eosio/ci
+- docker push eosio/producer:ci-ubuntu-18.04
