--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ matrix:
     - os: linux
       dist: xenial
       env: $DOCKER_IMAGE=ubuntu:16.04
-    - os: mac
+    - os: osx
+
 
 install:
   - ./.cicd/install.sh
