Update the other half of the Docker tag, too

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ before_install: |
 # DOCKER
 # script:
 # - echo '##### CHECKPOINT 2'
-# - docker build -t eosio/ci:ubuntu-18.04 -f ./.cicd/ubuntu-18.04.dockerfile .
+# # - docker build -t eosio/ci:ubuntu-18.04 -f ./.cicd/ubuntu-18.04.dockerfile .
+# - docker build -t eosio/producer:ci-ubuntu-18.04 -f ./.cicd/ubuntu-18.04.dockerfile .
 # after_success:
 # - echo '##### CHECKPOINT 3'
 # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 # # - docker push eosio/ci:ubuntu-18.04
-# - docker tag eos-dev eosio/producer:ci-ubuntu-18.04 # temporary workarond while awaiting permissions to docker.io/eosio/ci
 # - docker push eosio/producer:ci-ubuntu-18.04
 # EOSIO
 script: |
