added ccache and mac brew stuff

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: cpp
 git:
   # Depth is needed to prevent git describe failures in appbase
   depth: false
+cache: ccache
 matrix:
   include:
     - os: linux
