--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ matrix:
       dist: xenial
       services: docker
       env: IMAGE_TAG='ubuntu-18.04'
+    - os: linux
+      dist: xenial
+      services: docker
+      env: env: IMAGE_TAG='ubuntu:16.04'
     # - os: osx
     #   osx_image: xcode10.2
 
