--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - os: linux
       dist: xenial
       services: docker
-      env: env: IMAGE_TAG='ubuntu:16.04'
+      env: IMAGE_TAG='ubuntu:16.04'
     # - os: osx
     #   osx_image: xcode10.2
 
