--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,18 @@ matrix:
       dist: xenial
       services: docker
       env: IMAGE_TAG='ubuntu-18.04'
-    - os: linux
-      dist: xenial
-      services: docker
-      env: IMAGE_TAG='ubuntu-16.04'
-    - os: linux
-      dist: xenial
-      services: docker
-      env: IMAGE_TAG='amazonlinux-2'
-    - os: linux
-      dist: xenial
-      services: docker
-      env: IMAGE_TAG='centos-7'
+    # - os: linux
+    #   dist: xenial
+    #   services: docker
+    #   env: IMAGE_TAG='ubuntu-16.04'
+    # - os: linux
+    #   dist: xenial
+    #   services: docker
+    #   env: IMAGE_TAG='amazonlinux-2'
+    # - os: linux
+    #   dist: xenial
+    #   services: docker
+    #   env: IMAGE_TAG='centos-7'
     # - os: osx
     #   osx_image: xcode10.2
 
