Created travis-before.sh script

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,35 +2,20 @@ language: cpp
 git:
   depth: false # prevent git describe failure when executing the appbase version.cmake.in
 cache: ccache
-matrix:
-  include:
-    - os: linux
-      dist: xenial
-      services: docker
-      env: IMAGE_TAG='ubuntu-18.04'
-    # - os: osx
-    #   osx_image: xcode10.2
-
+os: osx
+osx_image: xcode10.2
 before_install: |
-  echo '##### CHECKPOINT 1'
-  echo '===== RESOURCES ====='
-  echo "$(getconf _NPROCESSORS_ONLN) CPU cores found."
-  if [[ "$(uname)" == Darwin ]]; then top -l 1 -s 0 | grep PhysMem; else vmstat -sSM | grep -i 'memory'; fi
-  df -h
-  echo '====================='
+  ./.cicd/travis-before.sh
 # DOCKER
 # script:
-# - echo '##### CHECKPOINT 2'
 # # - docker build -t eosio/ci:ubuntu-18.04 -f ./.cicd/ubuntu-18.04.dockerfile .
 # - docker build -t eosio/producer:ci-ubuntu-18.04 -f ./.cicd/ubuntu-18.04.dockerfile .
 # after_success:
-# - echo '##### CHECKPOINT 3'
 # - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 # # - docker push eosio/ci:ubuntu-18.04
 # - docker push eosio/producer:ci-ubuntu-18.04
 # EOSIO
 script: |
-  echo '##### CHECKPOINT 2'
   ./.cicd/travis-build.sh
 after_success:
 - echo '##### CHECKPOINT 3'
