--- a/.travis.yml
+++ b/.travis.yml
@@ -7,19 +7,27 @@ matrix:
     - os: linux
       dist: xenial
       services: docker
-      env: IMAGE_TAG='ubuntu-18.04'
+      env:
+        - IMAGE_TAG='ubuntu-18.04'
+        - CACHE_NAME='ubuntu-18.04'
     - os: linux
       dist: xenial
       services: docker
-      env: IMAGE_TAG='ubuntu-16.04'
+      env:
+        - IMAGE_TAG='ubuntu-16.04'
+        - CACHE_NAME='ubuntu-16.04'
     - os: linux
       dist: xenial
       services: docker
-      env: IMAGE_TAG='amazonlinux-2'
+      env:
+        - IMAGE_TAG='amazonlinux-2'
+        - CACHE_NAME='amazonlinux-2'
     - os: linux
       dist: xenial
       services: docker
-      env: IMAGE_TAG='centos-7'
+      env:
+        - IMAGE_TAG='centos-7'
+        - CACHE_NAME='centos-7'
     # - os: osx
     #   osx_image: xcode10.2
 
